kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: ihs.local
      http:
        paths:
          - path: /api/currency
            pathType: Prefix
            backend:
              service:
                name: currency-service
                port:
                  number: 8081
          - path: /api/customer
            pathType: Prefix
            backend:
              service:
                name: customer-service
                port:
                  number: 8082
